--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     </header>
 
     <main class="content-width">
+
         <img class="absolute-z-index" src="images/justice-bg.png" alt="">
 
-        <div class="d-flex justify-content-around align-items-center">
+        <div class="d-flex justify-content-around align-items-center logo-bg">
 
             <div class="d-flex flex-column justify-content-start">
 
@@ -47,11 +48,16 @@
                 <h1 class="main-container-width font-weight-bold mt-3">Подберем опытных юристов, которые решат вашу проблему с брокером</h1>
                 <div class="text-bigger mt-4">Получите <span class="text-primary font-weight-bold">бесплатную</span> пошаговую инструкцию по Chardgeback</div>
 
-                <div class="d-flex align-items-center">
-                    <a href="#">
-                        <button class="btn btn-primary text-bigger mt-3">Получить бесплатно</button>
-                    </a>
-                    <a class="main_a__color-blue-underline text-bigger ml-4" href="#">Связаться с нами</a>
+                <div class="d-flex flex-row align-items-center">
+                    <div>
+                        <a href="#">
+                            <button class="btn btn-primary text-bigger mt-3">Получить бесплатно</button>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a class="main_a__color-blue-underline text-bigger ml-4" href="#">Связаться с нами</a>
+                    </div>
                 </div>
 
                 <div class="d-flex align-items-center font-weight-light mt-2">
@@ -61,16 +67,18 @@
 
             </div>
 
+
             <div>
                 <img src="images/madam-main.png" alt="">
             </div>
 
         </div>
+
     </main>
 
     <div class="form padding-top-bottom">
 
-        <div class="content-width d-flex justify-content-between">
+        <div class="content-width d-flex justify-content-between align-items-center">
 
             <div class="container-width">
                 <h3 class="font-weight-bold">В инструкции вы узнаете, как сделать chardgebakc-возврат платежей от:</h3>
