--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="content-width">
-        <div class="d-flex justify-content-between pt-3">
+        <article class="d-flex justify-content-between pt-3">
 
             <div class="d-flex row">
                 <a href="#">
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-        </div>
+        </article>
     </header>
 
     <main class="content-width">
@@ -76,7 +76,7 @@
 
     </main>
 
-    <div class="form padding-top-bottom">
+    <section class="form padding-top-bottom">
 
         <div class="content-width d-flex justify-content-between align-items-center">
 
@@ -137,9 +137,9 @@
 
         </div>
 
-    </div>
+    </section>
 
-    <div class="questions text-center padding-top-bottom">
+    <section class="questions text-center padding-top-bottom">
         <h2>Остались вопросы?</h2>
         <p class="mt-3">
             Запишитесь на <span class="text-primary font-weight-bold">бесплатную консультацию</span> профильного специалиста прямо сейчас!
@@ -147,7 +147,7 @@
         <a href="#">
             <button class="btn btn-primary mt-3">Записаться на консультацию</button>
         </a>
-    </div>
+    </section>
 
     <footer class="padding-top-bottom">
         <div class="content-width d-flex justify-content-between">
